13772: Fix bottom layout issue to avoid cut off last texts in data privacy and terms of use screens.

--- a/src/xcode/ENA/ENA/Resources/Localization/style.css
+++ b/src/xcode/ENA/ENA/Resources/Localization/style.css
@@ -10,6 +10,10 @@ html, body, table {
 	"Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
 }
 
+body {
+	padding-bottom: 32px;
+}
+
 @supports (font: -apple-system-body) {
 	html, body, table {
 		font: -apple-system-body !important;
